--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "@types/yup": "^0.29.0",
     "expo": "~37.0.3",
+    "expo-linear-gradient": "~8.1.0",
     "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
