--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "rn-sliding-up-panel": "^2.4.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "yup": "^0.29.0"
