--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.4.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
@@ -21,15 +22,16 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "rn-sliding-up-panel": "^2.4.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rn-sliding-up-panel": "^2.4.2",
     "yup": "^0.29.0"
   },
   "devDependencies": {
