--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/yup": "^0.29.0",
+    "dayjs": "^1.8.28",
     "expo": "~37.0.3",
     "expo-linear-gradient": "~8.1.0",
     "formik": "^2.1.4",
