--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/yup": "^0.29.0",
+    "axios": "^0.19.2",
     "dayjs": "^1.8.28",
     "expo": "~37.0.3",
     "expo-linear-gradient": "~8.1.0",
