Added updating avatar with reducer

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "dayjs": "^1.8.28",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "formik": "^2.1.4",
     "react": "~16.9.0",
