Making an order fully done

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-top-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "@types/react-native-popup-dialog": "^0.16.2",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
     "@types/yup": "^0.29.0",
@@ -28,6 +29,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-paper": "^3.10.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
