--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "^2.4.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/material-top-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "@types/i18next": "^13.0.0",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-native-popup-dialog": "^0.16.2",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
@@ -23,8 +26,10 @@
     "expo-image-picker": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "formik": "^2.1.4",
+    "i18next": "^19.5.4",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-i18next": "^11.7.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal-datetime-picker": "^8.7.1",
